# lnmbot

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml
docs/: challenger-preregistration.md  choppiness-regime-study-preregistration.md  dashboard-roadmap.md  data-informed-challenger-preregistration.md  timeframe-discovery-preregistration.md
scripts/: analyze_bootstrap_state.py  backfill_binance.py  build_sizing_history.py  debug_1d_verdicts.py  derive_binance_timeframe.py  discover_timeframes.py  evaluate_momentum_confirmation_overlay.py  evaluate_timeframe.py  explore_pre2022_features.py  extract_v13_trade_log.py  lnmbot-dashboard.env.example  lnmbot-dashboard.service  lnmbot.service  monte_carlo_sizing.py  run_2y_combined_sweep.py  run_cooloff_sweep.py  run_dashboard.py  run_donchian_challenger.py  run_live.py  run_momentum_burst_challenger.py  run_overlap_matrix.py  run_pertf_cooloff_sweep.py  run_tuning_matrix.py  run_v13_verify.py  select_1h_tolerance.py  select_1h_winner_cooloff.py  smoke_isolated_trade.py  smoke_live_reconcile.py  study_choppiness_regime.py  sweep_age_decay.py  sweep_cooldown_modes_2y.py  validate_loss_cooldown_2y.py  walkforward_timeframe.py
src/lnmarkets_bot/: __init__.py  cli.py  config.py  logging.py  metrics.py  time.py
src/lnmarkets_bot/api/: __init__.py  account.py  auth.py  client.py  isolated.py  market.py  stream.py  trades.py
src/lnmarkets_bot/control/: __init__.py  kill.py  lifecycle.py
src/lnmarkets_bot/data/: __init__.py  binance.py  historical.py  live.py  mock.py  multitimeframe.py  source.py
src/lnmarkets_bot/engine/: __init__.py  backtest.py  fills.py  inmemory.py  live.py  live_account.py  live_executor.py
src/lnmarkets_bot/persistence/: __init__.py  db.py  models.py  recorder.py
src/lnmarkets_bot/risk/: __init__.py  guard.py  limits.py
src/lnmarkets_bot/strategy/: __init__.py  base.py  do_nothing.py  donchian_breakout.py  intents.py  ma_cross.py  momentum_burst.py  state.py
tests/: conftest.py  test_auth.py  test_config.py  test_cooldown_modes.py  test_dashboard.py  test_db_migrations.py  test_donchian_breakout.py  test_engines_equivalence.py  test_equity_calc.py  test_executor_exit.py  test_isolated_api.py  test_isolated_positions.py  test_kill_switch.py  test_live_account.py  test_live_data.py  test_live_executor.py  test_live_integration.py  test_metrics.py  test_momentum_burst.py  test_multitimeframe.py  test_recorder.py  test_risk_guard.py  test_strategy_isolation.py
